# rustyopenai

./: .env.template  .gitignore  Cargo.toml  README.md
examples/: currency_exchange.rs  repl.rs  streaming.rs
src/: auth.rs  client.rs  error.rs  lib.rs  logging.rs  macros.rs  prelude.rs  utils.rs
src/chat/: api_call.rs  chat_completion_response.rs  chat_request_body.rs  complete_chat.rs  create_chat_completion.rs  endpoint.rs  message.rs  mod.rs  model_names.rs  request_body.rs
src/chat/api_calls/: complete.rs  mod.rs  streaming.rs
src/chat/request/: chat_request_body.rs  mod.rs
src/chat/request/message/: assistant_message.rs  message.rs  mod.rs  system_message.rs  user_message.rs
src/chat/request/tool/: function.rs  mod.rs  tool.rs  tool_call.rs  tool_choice.rs
src/chat/response/: _stream.rs  chat_completion.rs  chat_completion_chunk.rs  choice.rs  chunk_choice.rs  completion.rs  completion_chunk.rs  finish_reason.rs  message.rs  mod.rs  response.rs  stream.rs  token_usage.rs
src/chat/response/tool/: chunk_function.rs  chunk_tool_call.rs  function.rs  mod.rs  tool_call.rs
src/embeddings/: api_call.rs  mod.rs  request_body.rs  response.rs
src/images/: endpoint.rs  mod.rs  response.rs
src/images/api_calls/: generation.rs  mod.rs
src/images/request/: generation.rs  image_response_format.rs  mod.rs  model.rs  size.rs
src/models/: endpoint.rs  list_models.rs  mod.rs  response.rs
src/models/api_calls/: list.rs  mod.rs  retrieve.rs
tests/: chat.rs  common.rs  mod.rs
