[package]
name = "rustyopenai"
version = "0.2.0"
edition = "2021"
description = "A Rust crate for interfacing with the OpenAI API."
license = "MIT"
homepage = "https://github.com/Isaac-Fate/rustyopenai"
repository = "https://github.com/Isaac-Fate/rustyopenai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.2"
reqwest = { version = "0.12.4", features = ["stream", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["macros"] }
thiserror = "1.0.61"
tokio = { version = "1.35.0", features = ["macros"] }
